{
    "name": "MainActions",
    "maps": [
        {
            "name": "Touchscreen",
            "id": "228ccab0-1a5d-4e94-a2e9-69ecaa8a77e1",
            "actions": [
                {
                    "name": "SingleTouch",
                    "type": "Button",
                    "id": "8be815a9-507e-4243-87d6-0af21c2b66ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "7ed1be0d-8ead-44f3-b9e9-b0afe1ddf75f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f24ba7a6-44bf-4243-9cff-48e3351fa1d5",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "SingleTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0471c96-8953-494a-81dc-769365137b66",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}